--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,5 +7,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: max-content;
+    min-height: 100vh;
 }
