--- a/src/app/components/movies/movies.component.css
+++ b/src/app/components/movies/movies.component.css
@@ -3,9 +3,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
-    padding: 3rem 0;
+    padding-top: 2rem;
 }
 
 .card {
@@ -15,9 +13,35 @@
     width: 18rem;
     height: 25rem;
     margin: 2rem;
+    background: whitesmoke;
 }
 
 .card-img-top {
     height: 15rem;
     width: 18rem;
+}
+
+.movieAllContent {
+    height: max-content;
+    min-height: 100vh;
+    width: 100vw;
+    background: black;
+    margin-top: 3rem;
+}
+
+.searchDiv {
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    position: fixed;
+    z-index: 100;
+    margin: 1rem 0;
+}
+
+.searchIp {
+    height: 2rem;
+    width: 17rem;
+    padding: 0.2rem;
+    border-radius: 0.2rem;
+    border: none;
 }
