--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,9 +15,9 @@
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/movies">Movies</a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" routerLink="/lazy/admin">Admin</a>
-                    </li> -->
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/users">Users</a>
                     </li>
