--- a/src/app/components/movies/movies.component.css
+++ b/src/app/components/movies/movies.component.css
@@ -26,6 +26,7 @@
     min-height: 100vh;
     width: 100vw;
     background: black;
+    color: #fff;
     margin-top: 3rem;
 }
 
@@ -44,4 +45,13 @@
     padding: 0.2rem;
     border-radius: 0.2rem;
     border: none;
+}
+
+.loading {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
