--- a/src/app/lazy-loading/users/users.component.html
+++ b/src/app/lazy-loading/users/users.component.html
@@ -1,1 +1,18 @@
-<p>users works!</p>
+<div style="text-align:center">
+    <!-- <apx-chart
+      [series]="chartOptions.series"
+      [chart]="chartOptions.chart"
+      [xaxis]="chartOptions.xaxis"
+      [title]="chartOptions.title"
+    ></apx-chart> -->
+    hello user 
+    <apx-chart [series]="chartSeries" [chart]="chartDetails"></apx-chart>
+
+    <apx-chart
+    [series]="lineChart.series"
+    [chart]="lineChart.chart"
+    [xaxis]="lineChart.xaxis"
+    [title]="lineChart.title"
+  ></apx-chart>
+  </div>
+  
