--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,6 +21,9 @@
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/users">Users</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/lazy/openAI">Open AI</a>
+                    </li>
                 </ul>
             </div>
         </div>
