--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,16 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.pageContainer {
+    height: max-content;
+    min-height: 100vh;
+    width: 100vw;
+    background: black;
+    color: #fff;
+    /* margin-top: 3rem; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
