--- a/src/app/lazy-loading/users/users.component.html
+++ b/src/app/lazy-loading/users/users.component.html
@@ -1,5 +1,5 @@
 <div class="userContainer">
-  <h3 style="margin-top: 2rem;">User Dummy graphs using apex charts</h3>
+  <h3 style="margin-top: 2rem;">User Dummy graphs using apex charts {{datee | date:'dd/MM/yyyy'}}</h3>
   <div class="twoGraphs">
     <div class="pieChartDiv">
       <apx-chart class="pieChart" [series]="chartSeries" [chart]="chartDetails"></apx-chart>
