--- a/src/app/lazy-loading/thoughts/thoughts.component.css
+++ b/src/app/lazy-loading/thoughts/thoughts.component.css
@@ -77,6 +77,7 @@
     font-weight: bold;
     text-decoration: underline;
     color: cyan;
+    cursor: pointer;
 }
 
 @media screen and (orientation:portrait) {
