--- a/src/app/lazy-loading/chat-gpt/chat-gpt.component.css
+++ b/src/app/lazy-loading/chat-gpt/chat-gpt.component.css
@@ -1,11 +1,9 @@
 .chatContent {
-    width: 90vw;
-    background: #353535;
+    width: 100vw;
     height: 80vh;
     position: fixed;
     overflow-y: auto;
-    padding: 0.5rem;
-    border-radius: 0.2rem;
+    padding: 1rem;
     border: none;
 }
 
@@ -51,11 +49,12 @@
 }
 
 .chatQues {
-    background: black;
+    background: #2b2b2b;
     padding: 0.5rem;
     font-size: larger;
 }
 
 .chatAns {
     padding: 0.5rem 1rem;
+    margin-bottom: 2rem;
 }
