--- a/src/app/lazy-loading/admin/admin.component.html
+++ b/src/app/lazy-loading/admin/admin.component.html
@@ -1,39 +1,104 @@
 <div class="adminContainer">
-    <form [formGroup]="adminForm" class="adminForms">
-        <h2 style="text-decoration: underline;">Admin Form</h2>
-        <div class="adminFormIp">
-            <input formControlName="username" class="adminip" type="text" placeholder="Username...">
-        </div>
-        <div class="adminFormIp">
-            <input formControlName="fname" class="adminip" type="text" placeholder="First name...">
-        </div>
-        <div *ngIf="adminForm.get('fname')?.errors?.['range'] && adminForm.get('fname')?.touched"
-            style="font-size: small;color: red;">Range should be between 5-10</div>
-        <div *ngIf="!adminForm.get('fname')?.value && adminForm.get('fname')?.touched"
-            style="font-size: small;color: red;">required field</div>
-        <div class="adminFormIp">
-            <input formControlName="email" class="adminip" type="email" placeholder="Email...">
-            <span *ngIf="emailCheck && emailCheck.invalid && emailCheck.touched"
-                style="color: red; font-size: small; font-weight: bold;">Invalid Input!</span>
-        </div>
-        <div class="adminFormIp">
-            <input formControlName="contact" class="adminip" type="number" placeholder="Contact...">
-        </div>
+  <form [formGroup]="adminForm" class="adminForms">
+    <h2 style="text-decoration: underline">Admin Form</h2>
+    <div class="adminFormIp">
+      <input
+        formControlName="username"
+        class="adminip"
+        type="text"
+        placeholder="Username..."
+      />
+    </div>
+    <div class="adminFormIp">
+      <input
+        formControlName="fname"
+        class="adminip"
+        type="text"
+        placeholder="First name..."
+      />
+    </div>
+    <div
+      *ngIf="adminForm.get('fname')?.errors?.['range'] && adminForm.get('fname')?.touched"
+      style="font-size: small; color: red"
+    >
+      Range should be between 5-10
+    </div>
+    <div
+      *ngIf="!adminForm.get('fname')?.value && adminForm.get('fname')?.touched"
+      style="font-size: small; color: red"
+    >
+      required field
+    </div>
+    <div class="adminFormIp">
+      <input
+        formControlName="email"
+        class="adminip"
+        type="email"
+        placeholder="Email..."
+      />
+      <span
+        *ngIf="emailCheck && emailCheck.invalid && emailCheck.touched"
+        style="color: red; font-size: small; font-weight: bold"
+        >Invalid Input!</span
+      >
+    </div>
+    <div class="adminFormIp">
+      <input
+        formControlName="contact"
+        class="adminip"
+        type="number"
+        placeholder="Contact..."
+      />
+    </div>
 
-        <button (click)="adminForm.reset()" [disabled]="adminForm.invalid" class="btn btn-danger">Submit</button>
-    </form>
+    <button
+      (click)="adminForm.reset()"
+      [disabled]="adminForm.invalid"
+      class="btn btn-danger"
+    >
+      Submit
+    </button>
+  </form>
 
-    <form [formGroup]="myForm">
-        <div formArrayName="items">
-            <div *ngFor="let item of itemControls.controls; let i = index" [formGroupName]="i">
-                <input formControlName="name" placeholder="Item Name">
-                <button (click)="removeItem(i)">Remove</button>
-            </div>
-        </div>
-        <div>
-            <input type="text" formControlName="dummyip" placeholder="dummy input">
-        </div>
-        <button (click)="addItem()">Add Item</button>
-        <button (click)="showData()">Save Item</button>
-    </form>
+  <form [formGroup]="myForm">
+    <div formArrayName="items">
+      <div
+        *ngFor="let item of itemControls.controls; let i = index"
+        [formGroupName]="i"
+      >
+        <input formControlName="name" placeholder="Item Name" />
+        <button (click)="removeItem(i)">Remove</button>
+      </div>
+    </div>
+    <div>
+      <input type="text" formControlName="dummyip" placeholder="dummy input" />
+    </div>
+    <button (click)="addItem()">Add Item</button>
+    <button (click)="showData()">Save Item</button>
+  </form>
+
+  <form [formGroup]="newForm">
+    <div formArrayName="newItems">
+      <div
+        *ngFor="let item of newItemControls.controls; let i = index"
+        [formGroupName]="i"
+      >
+        <ng-container *ngIf="auxEngAdded(i)">
+          <input
+            formControlName="auxEng"
+            placeholder="Aux Engine {{ i + 1 }}"
+          />
+        </ng-container>
+        <ng-container *ngIf="mainEngAdded(i)">
+          <input
+            formControlName="mainEng"
+            placeholder="Main Engine {{ i + 1 }}"
+          />
+        </ng-container>
+        <button (click)="removeItem(i)">Remove</button>
+      </div>
+    </div>
+    <button (click)="addNewItem('auxEng')">Add Aux</button>
+    <button (click)="addNewItem('mainEng')">Add Main</button>
+  </form>
 </div>
