tauri application integrated

--- a/src/app/lazy-loading/admin/admin.component.html
+++ b/src/app/lazy-loading/admin/admin.component.html
@@ -1,4 +1,5 @@
 <div class="adminContainer">
+  <button (click)="dummyAlert()">Alert</button>
   <form [formGroup]="adminForm" class="adminForms">
     <h2 style="text-decoration: underline">Admin Form</h2>
     <div class="adminFormIp">
